# el

./: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: architecture.md  documentation.md  executor.md  features.md  ideation.md  naming.md  stack.md
el/: __init__.py  cli.py  main.py
el/config/: __init__.py  consts.py
el/core/: __init__.py  agent.py  capability.py  dispatcher.py  executor.py  planner.py
el/db/: __init__.py  memory.py  sqlite.py
el/llm/: __init__.py  client.py  prompts.py  schemas.py
el/models/: __init__.py  request.py  response.py
el/skills/: __init__.py  history.py  network.py  shell.py
