[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "el"
version = "1.0.0"
description = "the ai"
authors = [
  {name = "prajesh", email = "prajesh.eleven118@gmail.com"}
]
maintainers = [
  {name = "prajesh", email = "prajesh.eleven118@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = []

[project.scripts]
el = "el.main:main"

[project.urls]
bugs = "https://github.com/pr4j3sh/el/issues"
homepage = "https://github.com/pr4j3sh/el"
